Add playlist image upload api
